--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -3,7 +3,9 @@ FROM node:16-alpine
 WORKDIR /app
 
 COPY package*.json ./
+COPY tsconfig*.json ./
 
+RUN npm install -g @nestjs/cli
 RUN npm install
 
 COPY . .
