--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,12 @@ services:
       - mongodb_data:/data/db
     networks:
       - keyboard-game-network
+    healthcheck:
+      test: echo 'db.runCommand("ping").ok' | mongo mongodb:27017/test --quiet
+      interval: 10s
+      timeout: 10s
+      retries: 5
+      start_period: 40s
 
   backend:
     build:
@@ -24,7 +30,8 @@ services:
     ports:
       - "3001:3001"
     depends_on:
-      - mongodb
+      mongodb:
+        condition: service_healthy
     environment:
       - NODE_ENV=production
       - MONGODB_URI=mongodb://root:rootpassword@mongodb:27017/keyboard-game?authSource=admin
@@ -32,6 +39,12 @@ services:
       - CLIENT_URL=http://localhost:3000
     networks:
       - keyboard-game-network
+    healthcheck:
+      test: wget --no-verbose --tries=1 --spider http://localhost:3001 || exit 1
+      interval: 10s
+      timeout: 10s
+      retries: 5
+      start_period: 40s
 
   frontend:
     build:
@@ -42,7 +55,8 @@ services:
     ports:
       - "3000:3000"
     depends_on:
-      - backend
+      backend:
+        condition: service_healthy
     environment:
       - NEXT_PUBLIC_API_URL=http://localhost:3001
     networks:
