--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,23 +1,12 @@
-FROM node:16-alpine AS deps
+FROM node:16-alpine 
+
 WORKDIR /app
-COPY package.json package-lock.json* ./
+
+COPY package*.json ./
 RUN npm install
 
-FROM node:16-alpine AS builder
-WORKDIR /app
-COPY --from=deps /app/node_modules ./node_modules
 COPY . .
 RUN npm run build
-
-FROM node:16-alpine AS runner
-WORKDIR /app
-ENV NODE_ENV production
-
-COPY --from=builder /app/next.config.js ./
-COPY --from=builder /app/public ./public
-COPY --from=builder /app/.next ./.next
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/package.json ./package.json
 
 EXPOSE 3000
 
