Обновлен Dockerfile для клиентской части с явными переменными среды

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,13 +1,23 @@
-FROM node:16-alpine 
+FROM node:16-alpine
 
 WORKDIR /app
 
+# Копируем файлы зависимостей
 COPY package*.json ./
 RUN npm install
 
+# Копируем исходный код
 COPY . .
+
+# Устанавливаем переменные среды
+ENV NODE_ENV=production
+ENV PORT=3000
+
+# Собираем приложение
 RUN npm run build
 
+# Открываем порт
 EXPOSE 3000
 
+# Запускаем сервер
 CMD ["npm", "start"]
